fix Jetbrains plugin check